force-app/sfpegQueueableUtility/objects/sfpegQueueableSetting__c/sfpegQueueableSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Configuration parameters for the sfpegQueueable_UTL Queueable Process Management framework</description>
    <label>sfpegQueueableSetting</label>
</CustomObject>