force-app/sfpegQueueableUtility/objects/sfpegQueueableSetting__c/fields/LogWindow__c.field-meta.xml
<CustomField>
    <fullName>LogWindow__c</fullName>
    <defaultValue>15</defaultValue>
    <description>Number of minutes for the aggregation of Log records by the sfpegQueue_UTL framework</description>
    <inlineHelpText>Number of minutes for the aggregation of Log records by the sfpegQueue_UTL framework</inlineHelpText>
    <label>Logging Window</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>