force-app/sfpegQueueableUtility/objects/sfpegQueueableSetting__c/fields/MaxLaunchRatio__c.field-meta.xml
<CustomField>
    <fullName>MaxLaunchRatio__c</fullName>
    <defaultValue>90.00</defaultValue>
    <description>Max. ratio of DailyAsyncApexExecutions governor limit for which new processes are actually enqueued</description>
    <inlineHelpText>Max. ratio of DailyAsyncApexExecutions governor limit for which new processes are actually enqueued</inlineHelpText>
    <label>Max Launch Ratio</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>