force-app/sfpegQueueableUtility/objects/sfpegQueueableSetting__c/fields/MaxRetries__c.field-meta.xml
<CustomField>
    <fullName>MaxRetries__c</fullName>
    <defaultValue>10</defaultValue>
    <description>Number of times the upsert of a log record is retried.</description>
    <inlineHelpText>Number of times the upsert of a log record is retried.</inlineHelpText>
    <label>Max. Retries</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>