force-app/sfpegQueueableUtility/objects/sfpegQueueableSetting__c/fields/MinRelaunchRatio__c.field-meta.xml
<CustomField>
    <fullName>MinRelaunchRatio__c</fullName>
    <defaultValue>80.00</defaultValue>
    <description>Min. ratio of DailyAsyncApexExecutions governor limit for which processes are actually relaunched by supervision schedulable process.</description>
    <inlineHelpText>Min. ratio of DailyAsyncApexExecutions governor limit for which processes are actually relaunched by supervision schedulable process.</inlineHelpText>
    <label>Min Relaunch Ratio</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>