force-app/sfpegQueueableUtility/objects/sfpegQueueableSetting__c/fields/SupervisedProcesses__c.field-meta.xml
<CustomField>
    <fullName>SupervisedProcesses__c</fullName>
    <description>CSV list of Queueable Apex classes which should be relaunched periodically (when daily limit has been reached).</description>
    <inlineHelpText>CSV list of Queueable Apex classes which should be relaunched periodically (when daily limit has been reached).</inlineHelpText>
    <label>Supervised Processes</label>
    <type>TextArea</type>
</CustomField>